--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,34 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
+<% layout("/layouts/boilderplate.ejs") %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WanderLust</title>
-</head>
+    <body>
+        <form method="post" action="/listings/<%=listing._id%>?_method=PATCH">
+            <input type="text" name="title" value="<%=listing.title %>">
+            <br>
+            <br>
+            <textarea name="description" id="des" cols="30" rows="10" value="<%=listing.descrption %>"></textarea>
+            <br>
+            <br>
+            <input type="text" name="image" value="<%=listing.image %>">
+            <br>
+            <br>
+            <input type="num" name="price" value="<%=listing.price %>">
+            <br>
+            <br>
+            <input type="text" name="location" value="<%=listing.location %>">
+            <br>
+            <br>
+            <input type="text" name="country" value="<%=listing.country %>">
+            <br>
+            <br>
 
-<body>
-    <form method="post" action="/listings/<%=listing._id%>?_method=PATCH">
-        <input type="text" name="title" value="<%=listing.title %>">
-        <br>
-        <br>
-        <textarea name="description" id="des" cols="30" rows="10" value="<%=listing.descrption %>"></textarea>
-        <br>
-        <br>
-        <input type="text" name="image" value="<%=listing.image %>">
-        <br>
-        <br>
-        <input type="num" name="price" value="<%=listing.price %>">
-        <br>
-        <br>
-        <input type="text" name="location" value="<%=listing.location %>">
-        <br>
-        <br>
-        <input type="text" name="country" value="<%=listing.country %>">
-        <br>
-        <br>
-
-        <button>Save</button>
-</body>
-
-</html>
+            <button>Save</button>
+    </body>
