--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,45 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
+<% layout("/layouts/boilderplate.ejs") %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WanderLust</title>
-</head>
+    <body>
+        <h3>Listing Detail: </h3>
+        <ul>
 
-<body>
-    <h3>Listing Detail: </h3>
-    <ul>
+            <li>
+                <%= listing.title %>
+            </li>
+            <li>
+                <%=listing.description  %>
+            </li>
 
-        <li>
-            <%= listing.title %>
-        </li>
-        <li>
-            <%=listing.description  %>
-        </li>
+            <li>
+                &#8377
+                <%=listing.price.toLocaleString("en-IN")  %>
+                    <!-- made the no to style in indian currency  -->
+            </li>
+            <li>
+                <%= listing.location %>
+            </li>
+            <li>
+                <%= listing.country %>
+            </li>
 
-        <li>
-            &#8377
-            <%=listing.price.toLocaleString("en-IN")  %>
-                <!-- made the no to style in indian currency  -->
-        </li>
-        <li>
-            <%= listing.location %>
-        </li>
-        <li>
-            <%= listing.country %>
-        </li>
+        </ul>
+        <br>
+        <a href="/listings/<%=listing._id%>">   Edit </a>
+        <br>
 
-    </ul>
-    <br>
-    <a href="/listings/<%=listing._id%>">   Edit </a>
-    <br>
-
-    <br>
-    <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
-        <button>Delete</button>
-    </form>
-
-</body>
-
-</html>
+        <br>
+        <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
+            <button>Delete</button>
+        </form>
+    </body>
