navbar styling completed

--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,4 +1,4 @@
-<% layout("/layouts/boilderplate.ejs") %>
+<%-layout("/layouts/boilderplate.ejs") %>
 
     <body>
         <form method="post" action="/listings/<%=listing._id%>?_method=PATCH">
