--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,4 +1,4 @@
-<% layout("/layouts/boilderplate.ejs") %>
+<%- layout("/layouts/boilderplate.ejs") %>
 
     <body>
         <h1>create new page </h1>
