--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,4 +1,4 @@
-<% layout("/layouts/boilderplate.ejs") %>
+<%- layout("/layouts/boilderplate.ejs") %>
 
     <body>
         <h3>Listing Detail: </h3>
