--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,35 @@
-body {
+/* body {
     background-color: pink;
+} */
+
+
+/* navbar styling */
+
+
+/* setting the height of navbar  */
+
+.navbar {
+    height: 5rem;
+    background-color: white;
 }
+
+
+/* setting color and size of compass  icon  */
+
+.fa-compass {
+    color: #fe424d;
+    font-size: 2rem;
+}
+
+
+/* using important to make override the bootstrap styling  */
+
+.nav-link {
+    color: #222222 !important;
+}
+
+
+/* navbar styling completed */
+
+
+/* footer styling  */
