--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,15 +1,22 @@
 <%- layout("/layouts/boilderplate.ejs") %>
 
-    <body>
-        <h3>All Listings</h3>
-        <ul>
-            <% for (let listings of alllistings){ %>
-                <li>
-                    <a href="/listings/show/<%= listings._id %>">
-                        <%= listings.title %>
-                    </a>
-                </li>
-                <% } %>
+    <h1>All Listings</h1>
 
-        </ul>
-    </body>
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+        <% for (let listing of alllistings){ %>
+            <a href="/listings/show/<%=listing._id%>" class="listing-links">
+                <div class="card col">
+                    <img src="<%=listing.image%>" class="card-img-top" alt="listing image" style="height: 20rem">
+                    <div class="card-img-overlay"></div>
+                    <div class="card-body">
+                        <p class="card-text">
+                            <b> <%= listing.title %> </b>
+                            <br> &#8377
+                            <%=listing.price.toLocaleString("en-IN") %>
+                        </p>
+                    </div>
+                </div>
+            </a>
+            <% } %>
+
+    </div>
