--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,25 +1,47 @@
 <%- layout("/layouts/boilderplate.ejs") %>
 
+    <div class="row">
+        <div class="col-8 offset-2">
+            <br>
+            <h3>Create New Listing </h3>
+            <!-- <br> -->
+            <form action="/listings" method="post">
+                <div class="mb-3">
+                    <label for="titile" class="form-label">Title</label>
+                    <input type="text" placeholder="Add a Catchy title" name="title" class="form-control">
+                </div>
 
-    <h1>create new page </h1>
-    <form action="/listings" method="post">
-        <input type="text" placeholder="enter title" name="title">
-        <br>
-        <br>
-        <textarea name="description" id="des" cols="30" rows="10" placeholder="enter description"></textarea>
-        <br>
-        <br>
-        <input type="text" placeholder="enter image url" name="image">
-        <br>
-        <br>
-        <input type="number" placeholder="enter price" name="price">
-        <br>
-        <br>
-        <input type="text" placeholder="enter loaction" name="location">
-        <br>
-        <br>
-        <input type="text" placeholder="enter country" name="country">
-        <br>
-        <br>
+                <div class="mb-3">
+                    <label for="description" class="form-label">Description</label>
+                    <textarea class="form-control" name="description" id="des" cols="20" rows="3" placeholder="enter description"></textarea>
+                </div>
 
-        <button>Save</button>
+                <div class="mb-3">
+                    <label for="image" class="form-label">Image</label>
+                    <input type="text" class="form-control" placeholder="enter image Url/Link" name="image">
+                </div>
+
+                <div class="row">
+
+                    <div class="mb-3 col-md-4">
+                        <label for="price" class="form-label">Price</label>
+                        <input type="number" class="form-control" placeholder="1200" name="price">
+                    </div>
+
+                    <div class="mb-3 col-md-8">
+                        <label for="country" class="form-label">Country</label>
+                        <input type="text" class="form-control" placeholder="India" name="country">
+                    </div>
+                </div>
+
+                <div class="mb-3">
+                    <label for="location" class="form-label">Location</label>
+                    <input type="text" class="form-control" placeholder="Jaipur,Delhi" name="location">
+
+                </div>
+                <button class="btn btn-dark add-btn">Add</button>
+                <br>
+                <br>
+            </form>
+        </div>
+    </div>
