--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,24 +1,45 @@
 <%-layout("/layouts/boilderplate.ejs") %>
 
+    <div class="row mt-3">
+        <div class="col-8 offset-2">
+            <h3>Edit Listing</h3>
+            <form method="post" action="/listings/<%=listing._id%>?_method=PATCH">
+                <div class="mb-3">
+                    <label for="titile" class="form-label">Title</label>
+                    <input type="text" value="<%=listing.title %>" name="title" class="form-control">
+                </div>
 
-    <form method="post" action="/listings/<%=listing._id%>?_method=PATCH">
-        <input type="text" name="title" value="<%=listing.title %>">
-        <br>
-        <br>
-        <textarea name="description" id="des" cols="30" rows="10" value="<%=listing.descrption %>"></textarea>
-        <br>
-        <br>
-        <input type="text" name="image" value="<%=listing.image %>">
-        <br>
-        <br>
-        <input type="num" name="price" value="<%=listing.price %>">
-        <br>
-        <br>
-        <input type="text" name="location" value="<%=listing.location %>">
-        <br>
-        <br>
-        <input type="text" name="country" value="<%=listing.country %>">
-        <br>
-        <br>
+                <div class="mb-3">
+                    <label for="description" class="form-label">Description</label>
+                    <textarea class="form-control" name="description" id="des" cols="20" rows="3"><%=listing.description %></textarea>
+                </div>
 
-        <button>Save</button>
+                <div class="mb-3">
+                    <label for="image" class="form-label">Image</label>
+                    <input type="text" class="form-control" value="<%=listing.image %>" name="image">
+                </div>
+
+                <div class="row">
+
+                    <div class="mb-3 col-md-4">
+                        <label for="price" class="form-label">Price</label>
+                        <input type="number" value="<%=listing.price %>" class="form-control" name="price">
+                    </div>
+
+                    <div class="mb-3 col-md-8">
+                        <label for="country" class="form-label">Country</label>
+                        <input type="text" class="form-control" value="<%=listing.country %>" name="country">
+                    </div>
+                </div>
+
+                <div class="mb-3">
+                    <label for="location" class="form-label">Location</label>
+                    <input type="text" class="form-control" value="<%=listing.location %>" name="location">
+
+                </div>
+                <button class="btn btn-dark edit-btn mt-3">Edit</button>
+                <br>
+                <br>
+            </form>
+        </div>
+    </div>
