--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,8 +1,7 @@
 <%- layout("/layouts/boilderplate.ejs") %>
 
-    <div class="row">
+    <div class="row mt-3">
         <div class="col-8 offset-2">
-            <br>
             <h3>Create New Listing </h3>
             <!-- <br> -->
             <form action="/listings" method="post">
