--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -37,7 +37,7 @@
                     <input type="text" class="form-control" value="<%=listing.location %>" name="location">
 
                 </div>
-                <button class="btn btn-dark edit-btn mt-3">Edit</button>
+                <button class="btn btn-dark update-btn mt-3">Update</button>
                 <br>
                 <br>
             </form>
