--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,34 +1,29 @@
 <%- layout("/layouts/boilderplate.ejs") %>
 
+    <div class="row mt-2">
+        <div class="col-8 offset-3">
+            <h3>Listing Detail: </h3>
+            <div class="card col-6">
+                <img src="<%=listing.image%>" class="card-img-top show-img" alt="listing image" style="height: 30vh">
+                <div class="card-img-overlay"></div>
+                <div class="card-body">
+                    <p class="card-text">
+                        <b> <%= listing.title %> </b>
+                        <br> &#8377
+                        <%=listing.price.toLocaleString("en-IN") %> <br>
+                            <%=listing.description  %> <br>
+                                <%= listing.location %> <br>
+                                    <%= listing.country %> <br>
+                    </p>
+                </div>
+            </div>
 
-    <h3>Listing Detail: </h3>
-    <ul>
+        </div>
+    </div>
 
-        <li>
-            <%= listing.title %>
-        </li>
-        <li>
-            <%=listing.description  %>
-        </li>
-
-        <li>
-            &#8377
-            <%=listing.price.toLocaleString("en-IN")  %>
-                <!-- made the no to style in indian currency  -->
-        </li>
-        <li>
-            <%= listing.location %>
-        </li>
-        <li>
-            <%= listing.country %>
-        </li>
-
-    </ul>
-    <br>
-    <a href="/listings/<%=listing._id%>">   Edit </a>
-    <br>
-
-    <br>
-    <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
-        <button>Delete</button>
-    </form>
+    <div class="btns offset-3">
+        <a href="/listings/<%=listing._id%>" class="btn btn-dark edit-btn">   Edit </a>
+        <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
+            <button class="btn btn-dark delete-btn">Delete</button>
+        </form>
+    </div>
