--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -7,12 +7,12 @@
             <form action="/listings" method="post">
                 <div class="mb-3">
                     <label for="titile" class="form-label">Title</label>
-                    <input type="text" placeholder="Add a Catchy title" name="title" class="form-control">
+                    <input required type="text" placeholder="Add a Catchy title" name="title" class="form-control">
                 </div>
 
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
-                    <textarea class="form-control" name="description" id="des" cols="20" rows="3" placeholder="enter description"></textarea>
+                    <textarea required class="form-control" name="description" id="des" cols="20" rows="3" placeholder="enter description"></textarea>
                 </div>
 
                 <div class="mb-3">
@@ -24,18 +24,18 @@
 
                     <div class="mb-3 col-md-4">
                         <label for="price" class="form-label">Price</label>
-                        <input type="number" class="form-control" placeholder="1200" name="price">
+                        <input required type="number" class="form-control" placeholder="1200" name="price">
                     </div>
 
                     <div class="mb-3 col-md-8">
                         <label for="country" class="form-label">Country</label>
-                        <input type="text" class="form-control" placeholder="India" name="country">
+                        <input required type="text" class="form-control" placeholder="India" name="country">
                     </div>
                 </div>
 
                 <div class="mb-3">
                     <label for="location" class="form-label">Location</label>
-                    <input type="text" class="form-control" placeholder="Jaipur,Delhi" name="location">
+                    <input required type="text" class="form-control" placeholder="Jaipur,Delhi" name="location">
 
                 </div>
                 <button class="btn btn-dark add-btn">Add</button>
