err hadnling and validation part completed

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -24,7 +24,7 @@
 
                     <div class="mb-3 col-md-4">
                         <label for="price" class="form-label">Price</label>
-                        <input required="number" class="form-control" placeholder="1200" name="price">
+                        <input required type="number" class="form-control" placeholder="1200" name="price">
                     </div>
 
                     <div class="mb-3 col-md-8">
