--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -2,19 +2,18 @@
 
     <div class="row mt-2">
         <div class="col-8 offset-3">
-            <h3>Listing Detail: </h3>
+            <h3> <b> <%= listing.title %> </b>
+            </h3>
             <div class="card col-6">
                 <img src="<%=listing.image%>" class="card-img-top show-img" alt="listing image" style="height: 30vh">
                 <div class="card-img-overlay"></div>
                 <div class="card-body">
-                    <p class="card-text">
-                        <b> <%= listing.title %> </b>
-                        <br> &#8377
-                        <%=listing.price.toLocaleString("en-IN") %> <br>
-                            <%=listing.description  %> <br>
+                    <%=listing.description  %>
+                        <p class="card-text">
+                            &#8377
+                            <%=listing.price.toLocaleString("en-IN") %> <br>
                                 <%= listing.location %> <br>
-                                    <%= listing.country %> <br>
-                    </p>
+                        </p>
                 </div>
             </div>
 
@@ -25,5 +24,21 @@
         <a href="/listings/<%=listing._id%>" class="btn btn-dark edit-btn">   Edit </a>
         <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
             <button class="btn btn-dark delete-btn">Delete</button>
+        </form>
+    </div>
+
+    <div class="col-8 offset-3 mb-3">
+        <hr>
+        <h4>Leave A Review:</h4>
+        <form action="/listings/<%=listing._id%>/review" method="post">
+            <div class="mb-3 mt-3">
+                <label for="rating" class="form-label">Rating</label>
+                <input type="range" min="1" max="5" step="1" class="form-range" name="rating" id="rating">
+            </div>
+            <div class="mb-3">
+                <label for="comment" class="form-label">Comments</label>
+                <textarea name="comment " required class="form-control" id="comment" cols="30" rows="5"></textarea>
+            </div>
+            <button class="btn btn-outline-dark">Submit</button>
         </form>
     </div>
