--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -5,7 +5,7 @@
     <div class="row row-cols-lg-4 row-cols-md-2 row-cols-sm-1">
         <% for (let listing of alllistings){ %>
             <a href="/listings/show/<%=listing._id%>" class="listing-links">
-                <div class="card col">
+                <div class="card col listing-card">
                     <img src="<%=listing.image%>" class="card-img-top" alt="listing image" style="height: 20rem">
                     <div class="card-img-overlay"></div>
                     <div class="card-body">
