--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -4,7 +4,7 @@
         <div class="col-8 offset-3">
             <h3> <b> <%= listing.title %> </b>
             </h3>
-            <div class="card col-6">
+            <div class="card col-6 listing-card">
                 <img src="<%=listing.image%>" class="card-img-top show-img" alt="listing image" style="height: 30vh">
                 <div class="card-img-overlay"></div>
                 <div class="card-body">
@@ -37,8 +37,29 @@
             </div>
             <div class="mb-3">
                 <label for="comment" class="form-label">Comments</label>
-                <textarea name="comment " required class="form-control" id="comment" cols="30" rows="5"></textarea>
+                <textarea name="comment" class="form-control" id="comment" cols="30" rows="5"></textarea>
             </div>
             <button class="btn btn-outline-dark">Submit</button>
         </form>
+        <hr>
+        <h4>All Reviews:</h4>
+        <div class="row">
+            <% for(review of listing.reviews){ %>
+                <div class="card col-5 ms-3 mb-3">
+                    <div class="card-body">
+                        <h5 class="card-title">User</h5>
+                        <p class="card-text">
+                            <%=review.comment%>
+                        </p>
+                        <p class="card-text">
+                            <%=review.rating%>star
+                        </p>
+                    </div>
+                    <form action="/listings/<%=listing._id%>/review/<%=review._id%>?_method=DELETE" class="mb-3 mt-2" method="post">
+                        <button class="btn btn-sm btn-dark">Delete</button>
+                    </form>
+                </div>
+                <% }%>
+        </div>
+
     </div>
