--- a/views/layouts/boilderplate.ejs
+++ b/views/layouts/boilderplate.ejs
@@ -18,7 +18,8 @@
 <body>
     <%-include("../includes/navbar.ejs") %>
         <div class="main_container">
-            <%- body %>
+            <%- include("../includes/flash.ejs") %>
+                <%- body %>
         </div>
 
         <%- include("../includes/footer.ejs") %>
