--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -9,6 +9,17 @@
                 <a class="nav-link active" href="/">Home</a>
                 <a class="nav-link" href="/listings">All Listings</a>
                 <a class="nav-link" href="/listings/new">New Listing</a>
+
+            </div>
+            <div class="navbar-nav ms-auto">
+                <% if(!curruser) { %>
+                    <a class="nav-link" href="/signup">Sign up</a>
+                    <a class="nav-link" href="/login">Log in</a>
+                    <% }  %>
+                        <% if(curruser) { %>
+                            <a class="nav-link" href="/logout">Log out</a>
+                            <% }  %>
+
             </div>
         </div>
     </div>
