--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,65 +1,77 @@
 <%- layout("/layouts/boilderplate.ejs") %>
 
     <div class="row mt-2">
-        <div class="col-8 offset-3">
-            <h3> <b> <%= listing.title %> </b>
-            </h3>
+        <div class="col-8 offset-3 ">
+            <h3> <b> <%= listing.title %> </b> </h3>
             <div class="card col-6 listing-card">
                 <img src="<%=listing.image%>" class="card-img-top show-img" alt="listing image" style="height: 30vh">
+                <p>
+                    Owned By:
+                    <%=listing.owner.username%>
+                </p>
                 <div class="card-img-overlay"></div>
                 <div class="card-body">
-                    <%=listing.description  %>
-                        <p class="card-text">
-                            &#8377
-                            <%=listing.price.toLocaleString("en-IN") %> <br>
-                                <%= listing.location %> <br>
-                        </p>
+                    <p>
+                        <%=listing.description  %>
+                    </p>
+                    <p class="card-text">
+                        &#8377
+                        <%=listing.price.toLocaleString("en-IN") %> <br>
+                            <p>
+                                <%= listing.location %> <br> </p>
+                    </p>
                 </div>
             </div>
-
         </div>
     </div>
-
     <div class="btns offset-3">
-        <a href="/listings/<%=listing._id%>" class="btn btn-dark edit-btn">   Edit </a>
-        <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
-            <button class="btn btn-dark delete-btn">Delete</button>
-        </form>
+        <%if(curruser&& curruser._id.equals(listing.owner._id)){ %>
+            <a href="/listings/<%=listing._id%>" class="btn btn-dark edit-btn">   Edit </a>
+            <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
+                <button class="btn btn-dark delete-btn">Delete</button>
+            </form>
+            <%} %>
     </div>
 
     <div class="col-8 offset-3 mb-3">
         <hr>
-        <h4>Leave A Review:</h4>
-        <form action="/listings/<%=listing._id%>/review" method="post">
-            <div class="mb-3 mt-3">
-                <label for="rating" class="form-label">Rating</label>
-                <input type="range" min="1" max="5" step="1" class="form-range" name="rating" id="rating">
-            </div>
-            <div class="mb-3">
-                <label for="comment" class="form-label">Comments</label>
-                <textarea name="comment" class="form-control" id="comment" cols="30" rows="5"></textarea>
-            </div>
-            <button class="btn btn-outline-dark">Submit</button>
-        </form>
-        <hr>
-        <h4>All Reviews:</h4>
-        <div class="row">
-            <% for(review of listing.reviews){ %>
-                <div class="card col-5 ms-3 mb-3">
-                    <div class="card-body">
-                        <h5 class="card-title">User</h5>
-                        <p class="card-text">
-                            <%=review.comment%>
-                        </p>
-                        <p class="card-text">
-                            <%=review.rating%>star
-                        </p>
-                    </div>
-                    <form action="/listings/<%=listing._id%>/review/<%=review._id%>?_method=DELETE" class="mb-3 mt-2" method="post">
-                        <button class="btn btn-sm btn-dark">Delete</button>
-                    </form>
+        <%if(curruser){ %>
+            <h4>Leave A Review:</h4>
+            <form action="/listings/<%=listing._id%>/review" method="post">
+                <div class="mb-3 mt-3">
+                    <label for="rating" class="form-label">Rating</label>
+                    <input type="range" min="1" max="5" step="1" class="form-range" name="rating" id="rating">
                 </div>
-                <% }%>
-        </div>
+                <div class="mb-3">
+                    <label for="comment" class="form-label">Comments</label>
+                    <textarea name="comment" class="form-control" id="comment" cols="30" rows="5"></textarea>
+                </div>
+                <button class="btn btn-outline-dark">Submit</button>
+            </form>
+            <%} %>
+                <hr>
+                <h4>All Reviews:</h4>
+                <div class="row">
+                    <% for(review of listing.reviews){ %>
+                        <div class="card col-5 ms-3 mb-3">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    <%=review.createdBy.username%>
+                                </h5>
+                                <p class="card-text">
+                                    <%=review.comment%>
+                                </p>
+                                <p class="card-text">
+                                    <%=review.rating%>star
+                                </p>
+                            </div>
+                            <% if(curruser && curruser._id.equals(review.createdBy._id)){%>
+                                <form action="/listings/<%=listing._id%>/review/<%=review._id%>?_method=DELETE" class="mb-3 mt-2" method="post">
+                                    <button class="btn btn-sm btn-dark">Delete</button>
+                                </form>
+                                <% }%>
+                        </div>
+                        <% }%>
+                </div>
 
     </div>
