--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -12,7 +12,7 @@
                         <p class="card-text">
                             <b> <%= listing.title %> </b>
                             <br> &#8377
-                            <%=listing.price.toLocaleString("en-IN") %>
+                            <%=listing.price.toLocaleString("en-IN") %>/night
                         </p>
                     </div>
                 </div>
