--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -3,6 +3,7 @@
     <STYLE>
         .filters {
             display: flex;
+  flex-wrap: wrap;
             text-align: center;
         }
         
