--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -19,6 +19,29 @@
         border-radius: 25px;
         padding: .5rem 3rem .5rem 3rem;
     }
+ .btn-searchh {
+        background-color: #fe424d;
+        color: #fff;
+        border-radius: 20px;
+    }
+    
+    .btn-searchh:hover {
+        background-color: #fe424d;
+        color: #fff;
+    }
+    
+    .btn-searchh i {
+        display: inline;
+        margin-left: 1rem;
+    }
+    
+    .search-inp {
+        border-radius: 25px;
+        padding: .5rem 3rem .5rem 3rem;
+    }
+      .navbar-collapse {
+        background-color: rgb(255, 254, 254);
+    }
 </style>
 
 
